<resources>
    <string name="app_name">Aura</string>
    <string name="profile_default_slogan">:ghost: I just installed Aura. Let\'s see what to make of it. :fire:</string>
    <string name="profile_color_contentDescription">Change my Aura\'s color</string>
    <string name="profile_default_name">:ghost: Anonymous</string>
    <string name="profile_default_text">I am an Aura user</string>
    <string name="ui_main_share_text">Hi, check out Aura, I promise you haven\'t seen any app like it :fire: https://www.getaura.io</string>
    <string name="ui_toolbar_enable_on">On\u00A0\u00A0</string>
    <string name="ui_toolbar_enable_off">Off\u00A0\u00A0</string>
    <string name="ui_toolbar_help">Help</string>
    <string name="ui_toolbar_debug">Debug</string>
    <string name="ui_toolbar_refresh">Refresh</string>
    <string name="permissions_heading">Welcome to Aura!</string>
    <string name="permissions_text">Aura needs your permission to work.\nNo worries, no data is sent over the internet.</string>
    <string name="permissions_request">Grant Permission</string>
    <string name="permissions_second_text">To manually grant the permission, click the button below, then "Permissions" and grant Aura the "Location" permission.</string>
    <string name="permissions_appSettings">App Settings</string>
    <string name="permissions_granted_text">Great, you\'re all set!\nSwipe to start.</string>
    <string name="terms_heading">Terms of Aura</string>
    <string name="terms_text"><![CDATA[
    <p>1. Data you enter is visible to nearby people.</p>
        <p>2. Nothing is sent over the internet.</p>
        <p>3. We don\'t collect any data.</p>
        <p>4. Aura is and stays free.</p>
        <p>5. Aura believes in humanism, freedom of speech, respect and equality of all people. If you don\'t, please uninstall it and read a wide variety of books.</p>
         ]]>
    </string>
    <string name="terms_disagree">Disagree</string>
    <string name="terms_agree">Agree</string>
    <string name="ui_profile_list_item_edit">Edit</string>
    <string name="ui_profile_list_item_drop">Delete</string>
    <string name="ui_profile_toast_slogan_adopted">Idea adopted</string>
    <string name="ui_profile_toast_slogan_replaced">Idea changed</string>
    <string name="ui_profile_toast_slogan_dropped">Idea removed</string>
    <string name="ui_profile_toast_name_changed">Name changed</string>
    <string name="ui_profile_toast_text_changed">Text changed</string>
    <string name="ui_profile_dialog_edit_confirm">Save</string>
    <string name="ui_profile_dialog_edit_cancel">Cancel</string>
    <string name="ui_profile_dialog_edit_color_title">Color your Aura</string>
    <string name="ui_profile_dialog_edit_name_title">Change my Name</string>
    <string name="ui_profile_dialog_edit_name_hint">Your Name</string>
    <string name="ui_profile_dialog_edit_text_title">Change my Text</string>
    <string name="ui_profile_dialog_edit_text_hint">My text</string>
    <string name="ui_profile_dialog_edit_slogan_hint">Your idea</string>
    <string name="ui_profile_dialog_add_slogan_title">Add an Idea</string>
    <string name="ui_main_add_slogan_too_short">Nothing added - too short</string>
    <string name="ui_profile_dialog_edit_slogan_title">Change my Idea</string>
    <plurals name="ui_dialog_edit_slogan_line_break_limit">
        <item quantity="zero">You cannot add line breaks</item>
        <item quantity="one">You can only add one line break</item>
        <item quantity="other">You can only add %d line breaks</item>
    </plurals>
    <string name="profile_dialog_replace_title">Select Idea to Replace</string>
    <plurals name="profile_dialog_replace_message">
        <item quantity="zero">Your Aura can contain cannot have any ideas.</item>
        <item quantity="one">Your Aura can contain one idea. To make room, select an idea to replace.</item>
        <item quantity="two">Your Aura can contain two ideas. To make room, select an idea to replace.</item>
        <item quantity="other">Your Aura can contain up to %d ideas. To make room, select an idea to replace.</item>
    </plurals>
    <string name="profile_dialog_replace_confirm">Replace</string>
    <string name="profile_dialog_replace_cancel">Cancel</string>
    <string name="profile_dialog_drop_title">Delete this Idea?</string>
    <string name="profile_dialog_drop_message">The idea will no longer be visible to others. This cannot be undone.</string>
    <string name="profile_dialog_drop_confirm">Delete it</string>
    <string name="profile_dialog_drop_cancel">Cancel</string>
    <string name="world_toast_slogan_already_adopted">This idea is already in your Aura</string>
    <string name="world_toast_cannot_add_no_space_available">Please delete on of your ideas before adding a new one</string>
    <plurals name="world_toast_refresh">
        <item quantity="zero">Looking for nearby Auras…</item>
        <item quantity="one">Refreshing nearby ideas …</item>
        <item quantity="other">Refreshing nearby ideas …</item>
    </plurals>
    <string name="world_no_peers_heading">Nobody Around</string>
    <string name="world_no_peers_info_text">Aura has a range of 20m to 100m. It only works with others.</string>
    <string name="world_no_peers_invite">Invite Friends!</string>
    <string name="world_no_peers_info_second_text">Should be seeing someone? Try turning Bluetooth off and on again.</string>
    <string name="world_starting_heading">Looking for Auras</string>
    <string name="world_starting_text">Nearby Auras will appear in a few seconds.</string>
    <plurals name="world_peers_heading_slogans">
        <item quantity="zero">No ideas nearby</item>
        <item quantity="one">Others shared one idea</item>
        <item quantity="other">Others shared %d idea</item>
    </plurals>
    <string name="world_peer_slogan_adopt">:fire:</string>
    <string name="world_peer_last_seen_lt_10s">is nearby</string>
    <string name="world_peer_last_seen_lt_1min">was nearby less than a minute ago</string>
    <string name="world_peer_last_seen_lt_10min">was nearby less than ##elapsed_minutes##" min ago</string>
    <string name="world_peer_last_seen_lt_30min">was nearby less than 30min ago</string>
    <string name="world_peer_last_seen_lt_45min">was nearby less than 45min ago</string>
    <string name="world_peer_last_seen_lte_1h">was nearby less than an hour ago</string>
    <string name="world_peer_last_seen_gt_1h">was nearby less than an hour ago</string>
    <string name="main_toast_debug_mode_enabled">Debug mode enabled</string>
    <string name="main_toast_debug_mode_disabled">Debug mode disabled</string>
    <string name="common_communicator_bt_restart_required_heading">Bluetooth Crashed</string>
    <string name="common_communicator_bt_restart_required_text">Please disable Bluetooth and activate it again.
    \nIf that doesn\'t help, try restarting your phone. This is not caused by Aura. Sorry about it!</string>
    <string name="common_communicator_bt_disabled_heading">Bluetooth Off</string>
    <string name="common_communicator_bt_disabled_text">Aura needs Bluetooth. Click here to enable it.</string>
    <string name="common_communicator_summary_bt_turning_on">Bluetooth is starting…</string>
    <string name="common_communicator_summary_on_not_active">Aura is getting ready…</string>
    <string name="common_communicator_ble_not_supported_heading">Phone Unsupported</string>
    <string name="common_communicator_ble_not_supported_text">Your phone doesn\'t properly support Bluetooth LE.
        \nWe\'re really sorry, you can\'t use Aura.
        \nThis is a hardware issue and won\'t change in the future.</string>
    <string name="common_communicator_disabled_heading">Your Aura is off</string>
    <string name="common_communicator_disabled_text">Turn it on to be visible and see others.</string>
    <string name="common_communicator_advertising_not_supported_heading">You\'re invisible.</string>
    <string name="common_communicator_advertising_not_supported_text">Your phone supports seeing others but not showing your Aura.
        \nThis is a hardware issue and won\'t change in the future.</string>
    <string name="common_dialog_confirm">Okay</string>
    <string name="common_dialog_cancel">Cancel</string>
    <string name="ui_dialog_bt_broken_title">Problems with Bluetooth?</string>
    <string name="ui_dialog_bt_broken_text">Bluetooth has been dis-/enabled multiple times\nMany older phones have crappy Bluetooth that tend to crash or not work. Restarting your phone might help.</string>
    <string name="ui_dialog_bt_broken_confirm">Okay</string>
    <string name="ui_dialog_bt_broken_never_show_again">Don\'t show this message again</string>
    <string name="notification_no_permission_title">Your Aura is off</string>
    <string name="notification_no_permission_text">Aura needs permissions to run</string>
    <string name="notification_bt_disabled_title">Your Aura is off</string>
    <string name="notification_bt_disabled_text">Please activate Bluetooth for Aura to work</string>
    <string name="notification_ble_not_supported_title">Your Aura is off</string>
    <string name="notification_ble_not_supported_text">Your phone doesn\'t support Bluetooth LE</string>
    <string name="notification_disabled_title">Your Aura is off</string>
    <string name="notification_advertising_not_supported_title">Your Aura is invisible</string>
    <string name="notification_advertising_not_supported_text">Your phone doesn\'t support being visible :/</string>
    <string name="notification_on_not_active_title">Your Aura is getting ready</string>
    <plurals name="notification_on_title">
        <item quantity="zero">Your Aura is on.</item>
        <item quantity="one">Your Aura is on - one :thought_balloon:</item>
        <item quantity="other">Your Aura is on - %d :thought_balloon:</item>
    </plurals>
    <string name="toolbar_preferences">Settings</string>
    <string name="prefs_app_group_key">app</string>
    <string name="prefs_app_group_title">Application</string>
    <string name="prefs_retention_key" translatable="false">retention</string>
    <string name="prefs_retention_title">How long to keep others\' ideas?</string>
    <string name="prefs_retention_summary">Change how long you see ideas of others after you left their proximity</string>
    <string name="prefs_retention_dialog_title">Keep others\' ideas…</string>
    <string name="prefs_notification_group_key" translatable="false">notifications</string>
    <string name="prefs_retention_default">300000</string>
    <string name="prefs_feedback_key" translatable="false">feedback</string>
    <string name="prefs_feedback_title">Feedback</string>
    <string name="prefs_feedback_summary">Please take a few minutes to help make Aura better!</string>
    <string name="prefs_about_title">About Aura</string>
    <string name="prefs_about_summary">Copyright and version</string>
    <string name="prefs_about_key" translatable="false">about</string>
    <string name="toolbar_tutorial">Show Tutorial</string>
    <string name="toolbar_terms">Reset Terms agreement</string>
    <string name="toolbar_debug">Debug</string>
    <string name="toolbar_complete_tutorial">Complete Tutorial</string>
    <string name="toolbar_finish">Exit</string>
    <string name="permissions_logo_description">Aura Logo</string>
    <string name="toolbar_shorten_retention">Shorten Retention</string>
    <string name="toolbar_toggle_fake_peers">Toogle Fake Peers</string>
    <string name="tutorial_button_back">Back</string>
    <string name="tutorial_button_next">Next</string>
    <string name="tutorial_name_headline">Choose a Name</string>
    <string name="tutorial_name_text">
        Click to enter a nickname, a pseudonym or your real name.
        \n
        \nLike the rest of your Aura this will be visible to Aura users around you. You can change it any time.</string>
</resources>