<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_enabled"
        android:actionLayout="@layout/common_toolbar_switch"
        android:title=""
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/toolbar_preferences"
        app:showAsAction="withText" />
    <item
        android:id="@+id/action_tutorial"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/toolbar_tutorial"
        app:showAsAction="withText" />
    <group>
        <item
            android:id="@+id/menu_debug_group"
            android:title="@string/toolbar_debug"
            android:visible="false">
            <menu>

                <item
                    android:id="@+id/action_reset_terms"
                    android:icon="@android:drawable/ic_menu_agenda"
                    android:title="@string/toolbar_terms"
                    app:showAsAction="withText" />

                <item
                    android:id="@+id/action_complete_tutorial"
                    android:icon="@android:drawable/ic_media_ff"
                    android:title="@string/toolbar_complete_tutorial"
                    app:showAsAction="withText" />
                <item
                    android:id="@+id/action_shorten_retention"
                    android:icon="@android:drawable/ic_menu_crop"
                    android:title="@string/toolbar_shorten_retention"
                    app:showAsAction="withText" />
                <item
                    android:id="@+id/action_toggle_fake_peers"
                    android:icon="@android:drawable/ic_menu_myplaces"
                    android:title="@string/toolbar_toggle_fake_peers"
                    app:showAsAction="withText" />
                <item
                    android:id="@+id/action_finish"
                    android:icon="@android:drawable/ic_menu_close_clear_cancel"
                    android:title="@string/toolbar_finish"
                    app:showAsAction="withText" />
            </menu>
        </item>
    </group>
</menu>