<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellow"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/permissions_logo_description"
                android:src="@mipmap/ic_launcher" />

        </LinearLayout>

        <TextView
            style="@style/FlatTitle"
            android:text="@string/permissions_heading" />

        <LinearLayout
            style="@style/FlatContentWrapper"
            android:paddingBottom="15dp">

            <TextView
                style="@style/FlatMessage.NoHorizontalMargin"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/permissions_text" />

            <LinearLayout style="@style/FlatButton.Wrapper">

                <Button
                    android:id="@+id/permissions_grant_permission"
                    style="@style/FlatButton"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/green"
                    android:text="@string/permissions_request" />
            </LinearLayout>

            <TextView
                style="@style/FlatMessage.NoHorizontalMargin"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/permissions_second_text" />

            <LinearLayout style="@style/FlatButton.Wrapper">

                <Button
                    android:id="@+id/permissions_show_app_settings"
                    style="@style/FlatButton"
                    android:layout_weight="1"
                    android:background="@color/blue"
                    android:text="@string/permissions_appSettings" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>