<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/FlatTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_heading" />

            <TextView
                android:id="@+id/terms_text"
                style="@style/FlatMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_text" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/terms_disagree"
            style="@style/FlatButtonCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/terms_disagree" />

        <Button
            android:id="@+id/terms_agree"
            style="@style/FlatButtonConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/terms_agree" />
    </LinearLayout>
</RelativeLayout>
