<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/TutorialWrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/tutorial_overlay"
        style="@style/TutorialOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/tutorial_heading"
            style="@style/TutorialHeadlineWithArrow.Left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                style="@style/TutorialHeadlineWithArrowArrow.Left"
                android:layout_width="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="15dp"
                android:layout_height="70dp" />

            <TextView
                style="@style/TutorialHeadlineWithArrowText.Bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tutorial_name_headline" />

        </LinearLayout>

        <TextView
            style="@style/TutorialMessage.Bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tutorial_name_text" />

        <LinearLayout
            style="@style/TutorialButtonWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/tutorial_back"
                style="@style/TutorialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tutorial_button_back" />

            <Button
                android:id="@+id/tutorial_next"
                style="@style/TutorialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tutorial_button_next" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>